tests/define-units-relationship/fail_1_is_bad_literal_div_1.stderr
error: no rules expected `/`
  --> tests/define-units-relationship/fail_1_is_bad_literal_div_1.rs:18:22
   |
18 |         U1 1 == U2 1 / __ 1,
   |                      ^ no rules expected this token in macro call
   |
note: while trying to match `*`
  --> src/define_units_relationship.rs
   |
   |     { $exact:tt $with_approx:tt $with_correlation:tt, $unit1:ident 1 == $unit2:ident 1 * __ 1 } => {
   |                                                                                        ^
